# DelphiModule4Python

./: pyproject.toml  setup.py
.github/workflows/: deploy.yml
delphimodule/: __init__.py
