[build-system]
requires = ["setuptools>=40.9.0", "wheel"]

[tool.cibuildwheel]
build = ["cp36-*", "cp37-*", "cp38-*", "cp39-*", "cp310-*"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_24"
#manylinux-i686-image = "manylinux2010"
manylinux-aarch64-image = "manylinux2014"
#manylinux-ppc64le-image = "manylinux2014"
#manylinux-s390x-image = "manylinux2014"
#manylinux-pypy_x86_64-image = "manylinux2010"
#manylinux-pypy_i686-image = "manylinux2010"
#manylinux-pypy_aarch64-image = "manylinux2014"
archs = ["x86_64"]
repair-wheel-command = ""

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["x86", "AMD64"]

[tool.isort]
profile = "black"
multi_line_output = 3
